# ROS_Labs

./: README.md
Lab_1/ex01/: commands.txt
Lab_2/ex01/: .bashrc
Lab_2/ex02/: list_exec_action_tutorials.txt
Lab_2/ex03/kvasik/: package.xml  setup.cfg  setup.py
Lab_2/ex04/: colcon_build.txt
Lab_2/ex05/: rosnode_info.txt  rosnode_list.txt
Lab_2/ex06/: cmd_vel.txt
Lab_2/ex08/: rqt_console.csv  three_turtles.launch
Lab_2/ex10/text_to_cmd_vel/: package.xml  setup.py
Lab_2/ex10/text_to_cmd_vel/text_to_cmd_vel/: publisher_commands.py  subscriber_commands.py
Lab_3/ex01/full_name_interface/: CMakeLists.txt  package.xml
Lab_3/ex01/service_full_name/: package.xml  setup.py
Lab_3/ex01/service_full_name/service_full_name/: client_member_function.py  service_member_function.py
Lab_3/ex02/action_turtle_commands/: CMakeLists.txt  package.xml
Lab_3/ex02/action_turtle_commands_server/: package.xml  setup.cfg  setup.py
Lab_3/ex03/: pose_speed_x.y1.yaml  pose_speed_x2.yaml
Lab_3/ex03/turtle_cmd_vel.mcap/: metadata.yaml  turtle_cmd_vel.mcap_0.db3
Lab_3/ex04/: doctor.txt
Lab_3/ex05/move_to_goal/: package.xml  setup.py
Lab_3/ex05/move_to_goal/move_to_goal/: move_to_goal.py
Lab_4/ex01/: last_transform.txt  transform.txt
Lab_4/ex02/: carrot.rviz
Lab_4/ex02/learning_tf2_py/: package.xml  setup.py
Lab_4/ex03/third_learning_tf2_py/: package.xml  setup.cfg  setup.py
Lab_5/ex01/: diff_drive.launch.py  robot.urdf
Lab_5/ex03/: commands.txt
Lab_5/ex04/robot_walking/: setup.py
Lab_5/ex05/robot_walking/: setup.py
Lab_6/exp02/robot_walking/: setup.py
(+61 files in other folders)
